@@ -1,4 +1,5 @@
 import { Component, OnInit } from '@angular/core';
+import { SharedCategoryService } from '@services/shared/shared-category.service';
 
 @Component({
   selector: 'app-catalogue',
@@ -6,8 +7,8 @@ import { Component, OnInit } from '@angular/core';
   styleUrls: ['./catalogue.component.scss']
 })
 export class CatalogueComponent implements OnInit {
-  constructor() { }
-
+  constructor(private sharedCategoryService: SharedCategoryService) { }
   ngOnInit() {
+    this.sharedCategoryService.refreshCategories(() => {}, false, false);
   }
 }
