@@ -96,6 +96,7 @@ export class DiscountItemsComponent implements OnInit {
         this.displayItems = result.result;
         this.sharedItemService.displayItems.next(this.displayItems);
         this.sharedCategoryService.numberOfCurrentTotalItems.next(result['total']);
+        this.sharedCategoryService.numberOfDiscountItems.next(result['total']);
       })
   }
   navigate(event) {
